# OpenThoughts-Agent

./: .beta9ignore  .gitignore  CONTRIBUTING.md  README.md  merged_harbor_config_eval-0d54f719f34dca712c8d6ef0f51df4670a2a287a-claude-haiku-4-5-20251001-20260114_164534.yaml  merged_harbor_config_eval-terminal-bench@2.0-gpt-5-mini-2025-08-07-20260115_093339.yaml  pyproject.toml
chat_templates/: dockerfile_git_config.txt  skyrl_agent_swebench_workflow.md
data/: commons.py  commons_tokens.py
data/ablation_experiments/: generate_configs.py  generate_resume_sbatches.py  generate_sbatches.py
data/all_puzzles/: generate.py
data/cloud/: launch_tracegen_cloud.py
data/generation/: base.py  utils.py
data/llm_verifier/: generate_code_contests.py  generate_dcagent.py  generate_eval_set.py  generate_freelancer.py  utils.py
data/local/: run_tracegen.py
data/neulab/: generate_agenttuning-alfworld.py  generate_agenttuning-db.py  generate_agenttuning-kg.py  generate_agenttuning-mind2web.py  generate_agenttuning-os.py  generate_agenttuning-webshop.py  generate_code-feedback.py  generate_codeactinstruct.py  generate_go-browse-wa.py  generate_mind2web.py  generate_nebius-swe-agent-trajectories.py  generate_nnetnav-live.py  generate_nnetnav-wa.py  generate_openhands.py  generate_orca-agentinstruct.py  generate_swe-gym-openhands-sampled-trajectories.py  generate_swe-smith-5ktrajectories.py  generate_synatra.py
data/sbatches/: openhands.sbatch  run_harbor_32node_8way_dp_glm47.sbatch  together_data_gen.sbatch
data/stackexchange/: generate_tor.py
data/swe_without_docker/: generate_r2egym_standard.py  generate_r2egym_wo_docker.py  generate_swesmith_standard.py  generate_swesmith_wo_docker.py
data/swegym/: __init__.py  generate.py  generate_abstract.py
data/swesmith/: generate.py
data/toolscale/: __init__.py  generate.py  generate_abstract.py
data/trace_hints/: README.md  generate.py  test_generate.py
data/unique_scale/: generate_swesmith.py  utils.py
data/vllm_experiments/: QUICKSTART.md  README.md  READY_TO_RUN.md  SUMMARY.md  dp.txt  export_traces.sh  generate_sbatch.py  generate_sbatch_ray_serve.py  launch_all.sh  launch_all_harbor_113k.sh  patched_ray_serve.py  run_0ef78680_batch_16384_seqs_256.sbatch  run_100ae3c0_batch_16384_seqs_128.sbatch  run_11d75c1e_batch_8192_seqs_512.sbatch  run_18a22f69_batch_32768_seqs_512.sbatch  run_1951b620_batch_32768_seqs_128.sbatch  run_2b0b55b8_batch_131072_seqs_256.sbatch  run_2node_pp2.sbatch  run_317db535_batch_16384_seqs_128.sbatch  run_32fc1967_tp4_pp2.sbatch  run_377e753a_batch_8192_seqs_256.sbatch  run_38d5e3c6_batch_8192_seqs_256.sbatch  run_3aca7552_ep_pplx.sbatch  run_3aea12c0_eplb_enabled.sbatch  run_41acecf3_aggressive_max_throughput.sbatch  run_451bcb31_batch_16384_seqs_128.sbatch  run_4776cc54_batch_32768_seqs_128.sbatch  run_4b0ede28_batch_16384_seqs_512.sbatch  run_4ba356b7_fp8_batch_32768.sbatch  run_4c5137a9_ep_pplx.sbatch  run_50685f7b_fp8_batch_32768.sbatch  run_50b719ad_batch_32768_seqs_256.sbatch  run_51184748_fp8_batch_16384.sbatch  run_53c035e3_batch_8192_seqs_512.sbatch  run_5b8e1126_batch_32768_seqs_512.sbatch  run_5dce9489_batch_32768_seqs_512.sbatch  run_64ff0865_prefix_caching.sbatch  run_65b957fb_aggressive_max_throughput.sbatch  run_6c014a11_batch_32768_seqs_256.sbatch  run_6c70d821_ep_deepep_low_latency.sbatch  (+94 more)
database/unified_db/: utils.py
docker/: Dockerfile.gpu-1x  Dockerfile.gpu-4x  Dockerfile.gpu-8x  Dockerfile.gpu-base  Dockerfile.gpu-rl  setup_docker_runtime.sh
eval/: example_rltasks_eval.py  run_tb_vllm_wx_qwen3_t0.2.sbatch  run_tb_vllm_wx_qwen3_t0.7.sbatch  run_tb_wx.sbatch
eval/cloud/: launch_eval_cloud.py
eval/local/: run_eval.py
eval/tacc/: README.md  dev_eval_listener.py  swebench_eval_harbor.sbatch  swebench_eval_listener.py  tacc_eval.sbatch  tacc_eval_harbor.sbatch  tacc_eval_multi_gpu.sbatch  tacc_eval_oracle.sbatch  tacc_eval_sandbox.sbatch  tb2_eval_harbor.sbatch  tb2_eval_listener.py
eval/trace_analysis/: README.md  download_rubric.py  upload_data.py
experiments/configs/: GLM-4.6-stackexchange-overflow-sandboxes-32eps-65k-reasoning_Qwen3-32B_train_config.yaml  GLM-4.6-stackexchange-overflow-sandboxes-32eps-65k-reasoning_global-batch-size_32_Qwen3-32B_train_config.yaml  GLM-4.6-stackexchange-overflow-sandboxes-32eps-65k-reasoning_global-batch-size_64_Qwen3-32B_train_config.yaml  Qwen3-32B_hero_run_4_code_32k_Qwen3-8B_train_config.yaml  glm-4.6-freelancer-32ep-131k-torch_Qwen3-8B_train_config.yaml  glm46-glaive-code-assistant-sandboxes-maxeps-131k_Qwen3-8B_train_config.yaml  glm46-ling-coder-sft-sandboxes-1-maxeps-131k_Qwen3-8B_train_config.yaml  glm46-neulab-agenttuning-alfworld-sandboxes-maxeps-131k_Qwen3-8B_train_config.yaml  glm46-neulab-mind2web-sandboxes-maxeps-131k_Qwen3-8B_train_config.yaml  glm46-r2egym_sandboxes-maxeps-131k_Qwen3-8B_train_config.yaml  kimi-k2-r2egym_sandboxes-maxeps-32k_Qwen3-8B_train_config.yaml  kimi-k2-swegym-tasks-maxeps-32k_Qwen3-8B_train_config.yaml  kimi-k2-swesmith_with_plain_docker-sandboxes-maxeps-32k_Qwen3-8B_train_config.yaml  nl2bash-verified-GLM-4.6-traces-32ep-32k_Qwen3-32B_train_config.yaml  open-thoughts-4-code-qwen3-32b-annotated_Qwen3-8B_train_config.yaml  open-thoughts-4-code-qwen3-32b-annotated_global-batch-size_256_Qwen3-8B_train_config.yaml  stackexchange-tezos-sandboxes_glm_4.6_traces_locetash_Qwen3-8B_train_config.yaml  (+3 more)
hpc/: README.md  activate_rl_env.sh  arg_groups.py  arguments.py  cli_utils.py  cloud_launch_utils.py  cloud_sync_utils.py  consolidate_launch_utils.py  datagen_config_utils.py  datagen_launch_utils.py  docker_runtime.py  eval_launch_utils.py  harbor_utils.py  hpc.py  http_proxy.py  job_name_ignore_list.py  launch.py  launch_utils.py  local_runner_utils.py  pinggy_utils.py  podman_hpc_utils.py  proxychains.conf.template  proxychains_setup.sh  ray_utils.py  rl_config_utils.py  rl_launch_utils.py  rl_requirements.txt  setup_rl_env.sh  sft_launch_utils.py  vllm_utils.py  wandb_launch_utils.py
hpc/JSC_setup/: train_skyrl.sh
notebook/: datagen_sft_tutorial.ipynb
rl/: README.md
scripts/: README.md
(+523 files in other folders)
